Undo "Make tests no longer need to be referenced from main project"
Because of trouble with Eclipse :(